# bosh-inventory-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py  models.py
app/api/routers/: products.py  stock.py
app/core/: error_handlers.py  headers.py
tests/: test_products.py  test_stock.py
