[tool.poetry]
name = "inventory-service"
version = "0.1.0"
description = "Inventory API with FastAPI, Motor (MongoDB), Poetry, Docker"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
motor = "^3.6.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-json-logger = "^2.0.7"
typing-extensions = "^4.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
anyio = "^4.4.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["app"]

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

